Just getting html linked up to css.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Tyler's Website</title>
+    <link rel="stylesheet" href="./style.css" type="text/css">
+  </head>
+  <body>
+    <h1>Howdy Y'all!</h1>
+  </body>
+</html>
