--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tyler's Website</title>
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="stylesheet" href="../style.css" type="text/css">
   </head>
   <body>
     <h1>Howdy Y'all!</h1>
